Updated home page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+		<!-- Latest compiled JavaScript -->
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link href="style.css" rel="stylesheet">
 		<title>Test Website</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
+		<nav class="navbar navbar-inverse">
+		  	<div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#"><span class="orange">Hades' </span><span class="whiteHeader">Portfolio</span></a>
+		    </div>
+		 
+		    <ul class="nav navbar-nav navbar-right">
+		      <li><a href="#">Work</a></li>
+		      <li><a href="#">Contact</a></li>
+		    </ul>
+		  </div>
 		</nav>
+		<img id="displayPic" src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10677860" alt="Smiley face" height="42" width="42">
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1 class="orange">Hi there, I'm Hades!</h1>
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hades31</a></li>
 			</ul>
 		</footer>
 	</body>
