--- a/work.html
+++ b/work.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<!-- Latest compiled and minified CSS -->
+<!-- Latest compiled and minified CSS -->
+	<head>	
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 		<!-- jQuery library -->
@@ -11,7 +10,6 @@
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link href="style.css" rel="stylesheet">
-		<title>Home Of Hades</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse">
@@ -25,20 +23,27 @@
 		      <li><a href="#">Contact</a></li>
 		    </ul>
 		  </div>
-		</nav>
-		<img id="displayPic" src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10677860" alt="Smiley face" height="42" width="42">
-		<div class="container">
-    		<div class="blurb">
-        		<h1 class="orange">Hi there, I'm Hades!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hades31</a></li>
-			</ul>
-		</footer>
+		</nav>	
+		<div class="row">
+		  <div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      <img src="http://www.deluxevectors.com/images/vector_images/thumb/cute-vector-objects.jpg" >
+		    </a>
+		     <p>Project 1</p>
+		  </div>
+		  <div class="row">
+		  <div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      <img src="http://webqe.com/images/a-cute-web-based-browser-file-system-with-jquery-and-php.jpg" >
+		    </a>
+		    <p>Project 2</p>
+		  </div>
+		  <div class="col-xs-6 col-md-3">
+		    <a href="#" class="thumbnail">
+		      <img src="https://c7.staticflickr.com/9/8304/7780657814_07ef4b33b2_z.jpg" >
+		    </a>
+		    <p>Project 3</p>
+		  </div>
+		</div>
 	</body>
 </html>
-4
